[package]
name = "winning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
postgres="0.19.2"
postgres-types = { version = "0.2.2", features = ["derive"] }
tokio = { version = "1.17.0", features = ["full"] }
tokio-postgres = "0.7.5"
serde={ version = "1.0.8", features = ["derive"] }
serde_derive = "1.0.8"